# Course3

./: README.md  pyproject.toml
src/: main.py  operation.py  readme.md  utils.py
tests/: conftest.py  operations_test.json  test_operation.py  test_utils.py
tests/htmlcov/: d_33bb6693cb98bfd0_operation_py.html  d_33bb6693cb98bfd0_utils_py.html  index.html
