[tool.poetry]
name = "projectwirhtest"
version = "0.1.0"
description = ""
authors = ["kanlar75 <kanlar75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mock = "^5.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
